RESOLVED FIXED315287
[GTK][WPE] Skia Compositor: fix hole punch
https://bugs.webkit.org/show_bug.cgi?id=315287
Summary [GTK][WPE] Skia Compositor: fix hole punch
Loïc Yhuel
Reported 2026-05-21 08:28:15 PDT
Currently the hole punch only works when setting WEBKIT_USE_SKIA_FOR_COMPOSITION=0.
Attachments
Loïc Yhuel
Comment 1 2026-05-21 08:32:38 PDT
EWS
Comment 2 2026-05-21 09:31:03 PDT
Committed 313674@main (09cd7f2fdce6): <https://commits.webkit.org/313674@main> Reviewed commits have been landed. Closing PR #65412 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.