[GTK][WPE] Skia Compositor: fix hole punch https://bugs.webkit.org/show_bug.cgi?id=315287

Reviewed by Carlos Garcia Campos.

Drawing a transparent rectangle using the default kSrcOver does nothing.
We need to use kClear (or transparent + kSrc) instead.

* Source/WebCore/platform/graphics/skia/SkiaCompositingLayer.cpp:
(WebCore::SkiaCompositingLayer::paintSelf):

Canonical link: https://commits.webkit.org/313674@main